--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/agohorel/graphql-typescript-react#readme",
   "devDependencies": {
     "@types/connect-redis": "0.0.14",
+    "@types/cors": "^2.8.7",
     "@types/express": "^4.17.8",
     "@types/express-session": "^1.17.0",
     "@types/node": "^14.6.4",
@@ -38,6 +39,7 @@
     "apollo-server-express": "^2.17.0",
     "argon2": "^0.27.0",
     "connect-redis": "^5.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
